--- a/faq.html
+++ b/faq.html
@@ -6,14 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FOGOP - Preguntas Frecuentes</title>
-    <meta name="description" content="Preguntas Frecuentes que realizan los vecinos, que adquieren o desean adquirir las obras de mejoras en los barrios o calles.">
+    <meta name="description"
+        content="Preguntas Frecuentes que realizan los vecinos, que adquieren o desean adquirir las obras de mejoras en los barrios o calles.">
     <meta name="author" content="Leandro Martinez">
-    <meta name="keywords" content="FOGOP, Fiduciaria, Fondo Fuduciario para la Obra Publica, Luminarias, aol, municipal, munipalidad de corrientes, corrientes, 
+    <meta name="keywords"
+        content="FOGOP, Fiduciaria, Fondo Fuduciario para la Obra Publica, Luminarias, aol, municipal, munipalidad de corrientes, corrientes, 
     Contribucion por mejoras, impuesto inmobiliario, ACOR, luminarias, mejoras, seguridad, postes luminicos, proyecto de luminarias, preguntas frecuentes, vecinos, Leandro Martinez">
     <link href="/css/faq-css.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/e108fbf003.js" crossorigin="anonymous" async></script>
+
 </head>
+
 <body>
-    <img id="logo-img" class="lazyload" data-src="/img/logotypefogop.webp" alt="logo FOGOP">
+    <div class="headerNav">        
+            <img id="logo-img" class="lazyload" src="./img/logotypefogop.webp" alt="logo FOGOP">        
+    </div>
+
     <div class="faq-container">
         <h1>Preguntas Frecuentes</h1>
         <div class="faq-question">
@@ -37,7 +45,10 @@
             </div>
         </div>
         <div class="back-button">
-            <a href="index.html">Regresar a la pagina principal</a>
+            <a href="index.html">
+                <i class="fa-solid fa-circle-left"></i> Volver
+            </a> 
         </div>
 </body>
+
 </html>
