--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js" async></script>
     <link rel="stylesheet" href="./floating-whatsapp-master/floating-wpp.min.css">
     <title>FOGOP</title>
-    <meta name="description" content="El fondo Fiduciario para la Obra Publica de sus siglas FOGOP, realiza propuestas y proyectos de mejoras, es un sistema que permite la realizacion, de forma financiada, de obras necesarias para el barrio, que son solicitadas por los vecinos.">
+    <meta name="description"
+        content="El fondo Fiduciario para la Obra Publica de sus siglas FOGOP, realiza propuestas y proyectos de mejoras, es un sistema que permite la realizacion, de forma financiada, de obras necesarias para el barrio, que son solicitadas por los vecinos.">
     <meta name="author" content="Leandro Martinez">
-    <meta name="keywords" content="FOGOP, Fiduciaria, Fondo Fuduciario para la Obra Publica, Luminarias, aol, municipal, munipalidad de corrientes, corrientes, 
+    <meta name="keywords"
+        content="FOGOP, Fiduciaria, Fondo Fuduciario para la Obra Publica, Luminarias, aol, municipal, munipalidad de corrientes, corrientes, 
     Contribucion por mejoras, impuesto inmobiliario, ACOR, luminarias, mejoras, seguridad, postes luminicos, proyecto de luminarias, Leandro Martinez">
 </head>
 
@@ -64,7 +66,8 @@
                 <h3 class="title">Proyecto de Luminarias</h3><br>
                 <h4>¿Qué es la contribución por mejoras?</h4>
                 <p class="parrafoo">Las contribuciones por mejoras es un sistema que permite la realizacion, de forma
-                    financiada, de obras necesarias para el barrio, que son solicitadas por los vecinos.</p><br>
+                    financiadas, de obras necesarias para el barrio, que son solicitadas por los vecinos.</p><br
+                    class="saltoNone">
                 <p class="parrafoo p-mobile">La presente propuesta tiene como objetivo la actualizacion de tecnologia en
                     luminarias con motivo de
                     brindar al vecino una mejor calidad de vida, y fomentar el crecimiento y desarrollo de la ciudad en
@@ -78,7 +81,7 @@
                     <h3 id="obras" class="sub-title">Sobre Obras</h3>
                     <p>La presente propuesta tiene como objetivo la actualizacion de tecnologia en luminarias con motivo
                         de brindar al vecino una mejor calidad de vida, y fomentar el crecimiento y desarrollo de la
-                        ciudad en terminos urbanisticos.</p><br>
+                        ciudad en terminos urbanisticos.</p><br class="saltoNone">
                     <p>Puede presentar la siguiente nota, solicitando la obra. Completando la calle, sus intersecciones
                         y firmada por al
                         menos dos vecinos</p><br>
@@ -96,7 +99,8 @@
                             Obra
                         </h4>
                     </div>
-                    <p>La postes estaran soportada por una base de hormigón armado para mejorar la seguridad eléctrica y
+                    <p>Los postes estaran soportada por una base de hormigón armado para mejorar la seguridad eléctrica
+                        y
                         evitando la prematura oxidación, en condiciones normales se instalaran cinco columnas por calle.
                     </p>
                 </article>
@@ -118,52 +122,47 @@
                         </h4>
                     </div>
                     <p>La iluminación consta de columnas metálicas de 9 metros de altura con brazo/acople incorporado,
-                        donde se extiende una luminaria unilateral de 120W de potencia.</p><br>
+                        donde se extiende una luminaria unilateral de 120W de potencia.</p>
                 </article>
             </div>
         </section>
         <section class="box beta">
-            <div>
-                <article class="box-what">
-                    <h3 class="sub-title">Financiacion</h3>
-                    <p>La misma se financia de la siguiente manera:
-                        En su primera etapa, la obra se financiara totalmente con recursos de FOGOP, concluida la misma,
-                        los propietarios reintegraran parte del costo correspondiente a los materiales utilizados,
-                        pudiéndose financiar hasta en 18 cuotas fijas y sin interés a optar por el vecino.
-                    </p>
-                    <br>
-                    <p class="parrafo-mob">El valor restante será afrontado por el municipio, como asi también la
-                        totalidad de los costos
-                        inherentes a la instalación(mano de obra)
-                        El importe mensual a abonar figurara en la boleta del impuesto inmobiliario, diferenciándose de
-                        tal con el concepto de “Contribucion por mejoras” o las siglas “aol”.
-                    </p><br>
-                </article>
-            </div>
+            <article class="box-what">
+                <div class="linea-separacion"></div>
+                <h3 class="sub-title saltoSeparado">Financiacion</h3>
+                <p>La misma se financia de la siguiente manera: En su primera etapa, la obra se financiará totalmente
+                    con recursos de FOGOP, concluida la misma, los propietarios reintegrarán parte del costo
+                    correspondiente a los materiales utilizados, pudiendo financiar hasta en 18 cuotas fijas y sin
+                    interés a elegir por el vecino.
+                </p>
+                <br>
+                <p class="parrafo-mob">El valor restante será afrontado por el municipio, como así también la totalidad de los costos inherentes a la instalación (mano de obra). El importe mensual a abonar figurará en la boleta del impuesto inmobiliario, diferenciándose de tal con el concepto de “Contribución por mejoras” o las siglas “AOL”.
+                </p><br>
+            </article>
         </section>
         <section>
             <div class="comentarios">
                 <div class="cards-info">
                     <img class="picture lazyload" data-src="./img/8.webp" alt="detalles de cuotas FOGOP">
                     <h4 class="name desc-mobile">En 1, 6, 12 o 18 Cuotas Fijas</h4>
-                    <p class="parrafo2 desc-mobile">En caso de no optar por alguna de las opciones, se seleccionara por
-                        defecto en
-                        18 cuotas fijas</p>
+                    <p class="parrafo2 desc-mobile">Cada vecino tiene la opción de elegir entre esas opciones de pago.
+                        Si no eligen ninguna, por defecto se aplicará en 18 cuotas fijas.</p>
                 </div>
                 <div class="cards-info">
                     <img class="picture lazyload" data-src="./img/7.webp" alt="cuotas fijas FOGOP">
                     <h4 class="name desc-mobile">Cuotas Fijas</h4>
-                    <p class="parrafo2 desc-mobile">El valor de la cuota no se ajustara a la inflacion, es fija.</p>
+                    <p class="parrafo2 desc-mobile">Las cuotas fijas son una opción de pago que no se ajusta a la
+                        inflación; Su valor que se notifica, permanecera estable.</p>
                 </div>
                 <div class="cards-info">
                     <img class="picture lazyload" data-src="./img/6.webp" alt="abono unico FOGOP">
                     <h4 class="name desc-mobile">Pago por unica vez</h4>
-                    <p class="parrafo2 desc-mobile">El pago de caracter "Contribucion por mejoras", se abona una unica
-                        vez, comienza
-                        a pagar estando finalizada la obra</p>
+                    <p class="parrafo2 desc-mobile">La contribución por mejoras es un pago único que se realiza una vez
+                        finalizada la obra, del cual se encargan desde Acor.</p>
                 </div>
-            </div><br><br><br>
-            <h3 id="pagos" class="title2">Donde abonar o Solicitar facturas impresas?</h3>
+            </div><br class="saltoNone"><br class="saltoNone"><br class="saltoNone">
+            <div class="linea-separacion"></div>
+            <h3 id="pagos" class="title2 dondeAbo saltoSeparado2">Donde abonar o Solicitar facturas impresas?</h3>
             <section class="order-Grid">
                 <div class="grid-container">
                     <div class="grid-item1 mobile-grid">
@@ -233,12 +232,13 @@
             </section>
         </section>
         <section class="box4">
-            <h2 class="sub-title3">Consultá el estado de deuda o imprimí tus boletas en la página de ACOR.</h2><br>
+            <h2 class="sub-title3">Consulta el estado de deuda, imprimí o abona tus boletas desde ACOR.</h2><br>
             <button class="bt3"><a class="go-acor" href="https://acor.gob.ar/" target="_blank">
                     <i class="fa-solid fa-share-from-square"></i>ir a ACOR
                 </a></button><br>
         </section>
-        <h3 id="donde" class="title2">DONDE ESTAMOS</h3>
+        <div id="donde"></div>
+        <h3 class="title2 dondeEst">Dónde estamos y cómo contactarnos</h3>
         <section class="mapDirec">
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3540.1427052872536!2d-58.83399698499008!3d-27.46481628289299!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94456ca702a91fc1%3A0x918624cb55c4a0d2!2s25%20de%20Mayo%201476%2C%20W3400%20BCT%2C%20Corrientes!5e0!3m2!1ses-419!2sar!4v1673444592665!5m2!1ses-419!2sar"
@@ -257,20 +257,23 @@
             <div class="grid-container2">
                 <div class="grid-item2">
                     <i class="fa-solid fa-location-dot"></i>
+                    <h4 class="detail-grid">DIRECCION - </h4>
                 </div>
                 <div class="grid-item3">
                     <h4>25 de Mayo 1476</h4>
                 </div>
                 <div class="grid-item2">
                     <i class="fa-solid fa-clock"></i>
+                    <h4 class="detail-grid">HORARIO - </h4>
                 </div>
                 <div class="grid-item3">
                     <div id="message">
-                        <span id="status"></span> - <span id="hours"></span>
+                        <span id="status">Lunes a Viernes - 8:00 a 13:00</span>  <span id="hours"></span>
                     </div>
                 </div>
                 <div class="grid-item2">
                     <i class="fa-solid fa-phone"></i>
+                    <h4 class="detail-grid">TELEFONO - </h4>
                 </div>
                 <div class="grid-item3">
                     <a href="tel:5493794265994" target="_blank">
@@ -279,6 +282,8 @@
                 </div>
                 <div class="grid-item2">
                     <i class="fa-solid fa-envelope"></i>
+                    <h4 class="detail-grid">CORREO - </h4>
+
                 </div>
                 <div class="grid-item3">
                     <h4>fogopmcc@gmail.com</h4>
@@ -287,71 +292,81 @@
         </section>
     </main>
     <section class="box4">
-        <h2 class="sub-title3">Por inconvenientes con el servicio o para solicitar mantenimiento comunicate al:</h2><br>
+        <h2 class="sub-title3">Para inconvenientes o mantenimiento del servicio, comunicate al:</h2><br>
         <button class="bt3"><a class="phone800" href="tel:080055556864" target="_blank">
                 <i class="fa-solid fa-phone-volume"></i>0800-55556864
             </a></button><br>
     </section>
     <footer>
-        <section class="selector">
-            <div class="email-footer">
-                <h2 class="mensaje-foot">Envianos un mensaje!</h2>
-                <div class="get-touch" data-aos="flip-right">
-                    <form action="https://formsubmit.co/dardojcoll@gmail.com" method="POST"
-                        onsubmit="return submitForm(this);" class="reservation">
-                        <div class="form-start">
-                            <label for="Name"></label>
-                            <input class="form-name" type="text" name="name" class="lang" key="text108"
-                                placeholder="Ingresa tu nombre">
-                            <label for="email"></label>
-                            <input class="form-email" type="email" name="email" id="email" class="lang" key="text109"
-                                placeholder="Ingresa un Correo valido">
-                        </div>
-                        <div class="form-text">
-                            <label for="Text"></label>
-                            <textarea class="form-message" name="message" cols="20" rows="5" class="lang" key="text110"
-                                placeholder="Escribe tu mensaje..."></textarea>
-                        </div>
-                        <div class="verificar">
-                            <div class="errores">
-                                <ul id="parent"></ul>
+
+
+
+        <div class="order-footer">
+
+
+            <section class="selector">
+                <div class="email-footer">
+                    <h2 class="mensaje-foot">Envíanos tu mensaje</h2>
+                    <div class="get-touch" data-aos="flip-right">
+                        <form action="https://formsubmit.co/dardojcoll@gmail.com" method="POST"
+                            onsubmit="return submitForm(this);" class="reservation">
+                            <div class="form-start">
+                                <label for="Name"></label>
+                                <input class="form-name" type="text" name="name" class="lang" key="text108"
+                                    placeholder="Ingresa tu nombre">
+                                <label for="email"></label>
+                                <input class="form-email" type="email" name="email" id="email" class="lang"
+                                    key="text109" placeholder="Ingresa un Correo valido">
                             </div>
-                            <div class="form-send">
-                                <button id="button-sub" type="submit" class="lang" key="text111">Enviar</button>
+                            <div class="form-text">
+                                <label for="Text"></label>
+                                <textarea class="form-message" name="message" cols="20" rows="5" class="lang"
+                                    key="text110" placeholder="Escribe tu mensaje..."></textarea>
                             </div>
-                        </div>
-                        <input type="hidden" name="_next" value="http://127.0.0.1:5500">
-                        <input type="hidden" name="_captcha" value="false"></input>
-                    </form>
+                            <div class="verificar">
+                                <div class="errores">
+                                    <ul id="parent"></ul>
+                                </div>
+                                <div class="form-send">
+                                    <button id="button-sub" class="button" type="submit" class="lang" key="text111">Enviar</button>
+                                </div>
+                            </div>
+                            <input type="hidden" name="_next" value="http://127.0.0.1:5500">
+                            <input type="hidden" name="_captcha" value="false"></input>
+                        </form>
+                    </div>
                 </div>
-            </div>
-            </div>
-        </section>
-        <section class="listas">
-            <ul class="lista1">
-                <li><a href="#">Inicio</a></li>
-                <li><a href="https://ciudaddecorrientes.gov.ar/" target="_blank">Municipalidad de Corrientes</a></li>
-                <li class="list-desk"><a href="https://sis.concejocorrientes.gob.ar/uploads/6837.pdf"
-                        target="_blank">Ordenanza N°6837</a></li>
-                <li class="list-desk"><a href="./notas/exenciones para pagos.pdf" target="_blank">Excentos de Pagos ART.
-                        108°/109°</a></li>
-            </ul>
-            <ul class="lista2">
-                <li class="list-desk"><a href="./notas/Modelo Solicitud Vecinos luminaria - FOGOP.docx"
-                        target="_blank">Modelo de Nota</a></li>
-                <li><a href="https://acor.gob.ar/" target="_blank">Pagina de Acor</a></li>
-                <li class="list-desk"><a href="tel:080055556864" target="_blank">0800-Mantenimiento</a></li>
-                <li><a href="./faq.html">Preguntas Frecuentes</a></li>
-            </ul>
-        </section>
+
+            </section>
+            <section class="listas">
+                <ul class="lista1">
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="https://ciudaddecorrientes.gov.ar/" target="_blank">Municipalidad de Corrientes</a>
+                    </li>
+                    <li class="list-desk"><a href="https://sis.concejocorrientes.gob.ar/uploads/6837.pdf"
+                            target="_blank">Ordenanza N°6837</a></li>
+                    <li class="list-desk"><a href="./notas/exenciones para pagos.pdf" target="_blank">Excentos de Pagos
+                            ART.
+                            108°/109°</a></li>
+                </ul>
+                <ul class="lista2">
+                    <li class="list-desk"><a href="./notas/Modelo Solicitud Vecinos luminaria - FOGOP.docx"
+                            target="_blank">Modelo de Nota</a></li>
+                    <li><a href="https://acor.gob.ar/" target="_blank">Pagina de Acor</a></li>
+                    <li class="list-desk"><a href="tel:080055556864" target="_blank">0800-Mantenimiento</a></li>
+                    <li><a href="./faq.html">Preguntas Frecuentes</a></li>
+                </ul>
+            </section>
+        </div>
         <section class="column-footer">
             <div class="logo-f">
                 <a href="#"><img class="lazyload" data-src="img/logoFoot.webp" alt="logo de FOGOP"></a><br>
             </div>
         </section>
+        </div>
         <div class="cop">
-            <p class="copyright2">Copyright 2023. All Rights Reserved - Disign&Developed by <a class="copyright2"
-                    href="https://www.linkedin.com/in/leandromz/" target="_blank">Leandro Martinez</a></p>
+            <p class="copyright2">Diseño y desarrollo por © <a class="copyright2"
+                    href="https://www.linkedin.com/in/leandromz/" target="_blank">Leandro Martinez</a> - Todos los derechos reservados - 2023</p>
         </div>
     </footer>
     <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
