--- a/faq.html
+++ b/faq.html
@@ -18,36 +18,52 @@
 </head>
 
 <body>
-    <div class="headerNav">        
-            <img id="logo-img" class="lazyload" src="./img/logotypefogop.webp" alt="logo FOGOP">        
+    <div class="headerNav">
+        <img id="logo-img" class="lazyload" src="./img/logotypefogop.webp" alt="logo FOGOP">
     </div>
 
     <div class="faq-container">
         <h1>Preguntas Frecuentes</h1>
         <div class="faq-question">
-            <h2>¿Qué es el programa de iluminación pública?</h2>
-            <p>El programa de iluminación pública es un servicio brindado por el municipio para proporcionar iluminación
-                en las calles y avenidas de la ciudad para garantizar la seguridad de los residentes.</p>
+            <h2>¿En que consiste el Proyecto de Luminarias?</h2>
+            <p>El proyecto de luminarias del programa Contribucion por Mejoras, consta en mejoras para proporcionar iluminación
+                en los barrios y calles de la ciudad para garantizar la seguridad de los residentes.</p>
         </div>
         <div class="faq-question">
             <h2>¿Cómo puedo solicitar una nueva luminaria en mi calle?</h2>
-            <p>Puedes enviar una nota a la dirección de iluminación pública del municipio o llenar un formulario en
-                línea en nuestro sitio web.</p>
+            <p>Podes acercarnos una nota a mesa de entrada de FOGOP (ubicada en Mayo 1476). solicitando el proyecto de luminarias
+                firmada por los vecinos de su cuadra. En la pagina principal contamos con un modelo de nota, podes descargarla y
+                completar los campos faltantes.
+            </p>
             <div class="faq-question">
-                <h2>¿Cuáles son las exenciones de pago para el servicio de iluminación pública?</h2>
-                <p>Existen ciertas exenciones de pago para personas mayores de 65 años, discapacitados, entre otros.
-                    Puedes encontrar más información sobre las exenciones en nuestra página web.</p>
+                <h2>¿Cuáles son las exenciones de pago para el proyecto de luminarias?</h2>
+                <p>Existen ciertas exenciones de pago para personas mayores de 65 años, discapacitados, que cumplan con lo dispuesto en el código Fiscal Municipal.
+                    Puedes encontrar más información sobre las exenciones en nuestra página web, o siguiendo el siguiente enlace.
+                    <a href="./notas/exenciones para pagos.pdf" target="_blank"> Excentos de Pagos
+                        ART.
+                        108°/109°</a></p>
+            </div>
+            
+            <div class="faq-question">
+                <h2>¿Con quién puedo contactar en caso de un problema de mantenimiento con una luminaria?</h2>
+                <p>Puedes contactar al número 0800-55556864. Donde se te brindara un numero de seguimiento para poder realizar consultas sobre tu caso particular.</p>
             </div>
             <div class="faq-question">
-                <h2>¿Quién puedo contactar en caso de un problema con una luminaria?</h2>
-                <p>Puedes contactar a nuestro servicio de mantenimiento al número 0800-55556864 o enviar una nota a
-                    través de nuestro sitio web.</p>
+                <h2>Para cualquier otra duda</h2>
+                <ul>
+                    <li>Financiamiento </li>
+                    <li>Liquidacion</li>
+                    <li>Estado de la Solicitud</li>
+                    <li>Otras Obras</li>
+                    
+                </ul>
+                <p>Puedes contactar al número de nuestra oficina +54 9 379-4265994.</p>
             </div>
         </div>
         <div class="back-button">
             <a href="index.html">
                 <i class="fa-solid fa-circle-left"></i> Volver
-            </a> 
+            </a>
         </div>
 </body>
 
