--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
                 <li><a class="navcolor5" href="#donde">Donde Estamos</a></li>
             </ul>
         </nav>
+        <a class="hambur-desktop">
+            <i class="fa-solid fa-bars"></i>
+        </a>
     </header>
     <main>
         <div class="slide-contenedor">
@@ -308,7 +311,7 @@
                 <div class="email-footer">
                     <h2 class="mensaje-foot">Envíanos tu mensaje</h2>
                     <div class="get-touch" data-aos="flip-right">
-                        <form action="https://formsubmit.co/dardojcoll@gmail.com" method="POST"
+                        <form action="https://formsubmit.co/fogopmcc@gmail.com" method="POST"
                             onsubmit="return submitForm(this);" class="reservation">
                             <div class="form-start">
                                 <label for="Name"></label>
