--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
             <img class="logotype" src="./img/logotypefogop.webp" alt="FOGOP logo">
         </div>
         <nav class="mn-dsktop">
+            <button class="close-menu">
+                <i class="fa-solid fa-circle-chevron-right"></i>
+            </button>
             <ul class="desktop-menu">
                 <li><a class="navcolor2" href="#project">Proyecto de Luminarias</a></li>
                 <li><a class="navcolor3" href="#obras">Sobre Obras</a></li>
