--- a/index.html
+++ b/index.html
@@ -26,17 +26,18 @@
 <body>
     <header>
         <div class="marca">
-            <img class="logotype" src="./img/logotypefogop.webp" alt="FOGOP logo">
+            <img class="logotype" src="./img/fogo-logoo.png" alt="FOGOP logo">
         </div>
         <nav class="mn-dsktop">
             <button class="close-menu">
                 <i class="fa-solid fa-circle-chevron-right"></i>
             </button>
+            <h2 class="program-title">--- Programa de Contribucion por Mejoras ---</h2>
             <ul class="desktop-menu">
-                <li><a class="navcolor2" href="#project">Proyecto de Luminarias</a></li>
-                <li><a class="navcolor3" href="#obras">Sobre Obras</a></li>
-                <li><a class="navcolor4" href="#pagos">Sobre Pagos</a></li>
-                <li><a class="navcolor5" href="#donde">Donde Estamos</a></li>
+                <li><a class="navcolor2" href="#project">PROYECTO DE LUMINARIAS</a></li>
+                <li><a class="navcolor3" href="#obras">SOBRE OBRAS</a></li>
+                <li><a class="navcolor4" href="#pagos">SOBRE PAGOS</a></li>
+                <li><a class="navcolor5" href="#donde">DONDE ESTAMOS</a></li>
             </ul>
         </nav>
         <a class="hambur-desktop">
