--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                 <img class="lazyload" data-src="/img/f3.webp" alt="proyecto luminarias, FOGOP">
             </div>
             <div class="box">
-                <h3 class="title">Proyecto de Luminarias</h3><br>
-                <h4>¿Qué es la contribución por mejoras?</h4>
+                <h3 class="title">PROYECTO DE LUMINARIAS</h3><br>
+                <h4>¿QUE ES LA CONTRIBUCION POR MEJORAS?</h4>
                 <p class="parrafoo">Las contribuciones por mejoras es un sistema que permite la realizacion, de forma
                     financiadas, de obras necesarias para el barrio, que son solicitadas por los vecinos.</p><br
                     class="saltoNone">
@@ -85,7 +85,7 @@
         <section class="box beta">
             <div>
                 <article class="box-what">
-                    <h3 id="obras" class="sub-title">Sobre Obras</h3>
+                    <h3 id="obras" class="sub-title">SOBRE OBRAS</h3>
                     <p>La presente propuesta tiene como objetivo la actualizacion de tecnologia en luminarias con motivo
                         de brindar al vecino una mejor calidad de vida, y fomentar el crecimiento y desarrollo de la
                         ciudad en terminos urbanisticos.</p><br class="saltoNone">
@@ -103,7 +103,7 @@
                     <div class="box2">
                         <h4 class="sub-title2">
                             <i class="fa-solid fa-check-double"></i>
-                            Obra
+                            OBRA
                         </h4>
                     </div>
                     <p>Los postes estaran soportada por una base de hormigón armado para mejorar la seguridad eléctrica
@@ -115,7 +115,7 @@
                     <div class="box2">
                         <h4 class="sub-title2">
                             <i class="fa-solid fa-check-double"></i>
-                            Instalacion
+                            INSTALACION
                         </h4>
                     </div>
                     <p>La instalación será llevada a cabo por equipo técnico especializado, los mismos tendrán en cuenta
@@ -125,7 +125,7 @@
                     <div class="box2">
                         <h4 class="sub-title2">
                             <i class="fa-solid fa-check-double"></i>
-                            Iluminacion
+                            ILUMINACION
                         </h4>
                     </div>
                     <p>La iluminación consta de columnas metálicas de 9 metros de altura con brazo/acople incorporado,
@@ -136,7 +136,7 @@
         <section class="box beta">
             <article class="box-what">
                 <div class="linea-separacion"></div>
-                <h3 class="sub-title saltoSeparado">Financiacion</h3>
+                <h3 class="sub-title saltoSeparado">FINANCIACION</h3>
                 <p>La misma se financia de la siguiente manera: En su primera etapa, la obra se financiará totalmente
                     con recursos de FOGOP, concluida la misma, los propietarios reintegrarán parte del costo
                     correspondiente a los materiales utilizados, pudiendo financiar hasta en 18 cuotas fijas y sin
@@ -151,25 +151,25 @@
             <div class="comentarios">
                 <div class="cards-info">
                     <img class="picture lazyload" data-src="./img/8.webp" alt="detalles de cuotas FOGOP">
-                    <h4 class="name desc-mobile">En 1, 6, 12 o 18 Cuotas Fijas</h4>
+                    <h4 class="name desc-mobile">En 1, 6, 12 o 18 CUOTAS</h4>
                     <p class="parrafo2 desc-mobile">Cada vecino tiene la opción de elegir entre esas opciones de pago.
                         Si no eligen ninguna, por defecto se aplicará en 18 cuotas fijas.</p>
                 </div>
                 <div class="cards-info">
                     <img class="picture lazyload" data-src="./img/7.webp" alt="cuotas fijas FOGOP">
-                    <h4 class="name desc-mobile">Cuotas Fijas</h4>
+                    <h4 class="name desc-mobile">CUOTAS FIJAS</h4>
                     <p class="parrafo2 desc-mobile">Las cuotas fijas son una opción de pago que no se ajusta a la
                         inflación; Su valor que se notifica, permanecera estable.</p>
                 </div>
                 <div class="cards-info">
                     <img class="picture lazyload" data-src="./img/6.webp" alt="abono unico FOGOP">
-                    <h4 class="name desc-mobile">Pago por unica vez</h4>
+                    <h4 class="name desc-mobile">PAGO POR UNICA VEZ</h4>
                     <p class="parrafo2 desc-mobile">La contribución por mejoras es un pago único que se realiza una vez
                         finalizada la obra, del cual se encargan desde Acor.</p>
                 </div>
             </div><br class="saltoNone"><br class="saltoNone"><br class="saltoNone">
             <div class="linea-separacion"></div>
-            <h3 id="pagos" class="title2 dondeAbo saltoSeparado2">Donde abonar o Solicitar facturas impresas?</h3>
+            <h3 id="pagos" class="title2 dondeAbo saltoSeparado2">DONDE ABONAR O SOLICITAR FACTURAS IMPRESAS</h3>
             <section class="order-Grid">
                 <div class="grid-container">
                     <div class="grid-item1 mobile-grid">
@@ -245,7 +245,7 @@
                 </a></button><br>
         </section>
         <div id="donde"></div>
-        <h3 class="title2 dondeEst">Dónde estamos y cómo contactarnos</h3>
+        <h3 class="title2 dondeEst">DONDE ESTAMOS Y COMO CONTACTARNOS</h3>
         <section class="mapDirec">
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3540.1427052872536!2d-58.83399698499008!3d-27.46481628289299!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94456ca702a91fc1%3A0x918624cb55c4a0d2!2s25%20de%20Mayo%201476%2C%20W3400%20BCT%2C%20Corrientes!5e0!3m2!1ses-419!2sar!4v1673444592665!5m2!1ses-419!2sar"
