--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </div>
             <div class="box">
                 <h3 class="title">PROYECTO DE LUMINARIAS</h3><br>
-                <h4>¿QUE ES LA CONTRIBUCION POR MEJORAS?</h4>
+                <h4 class="orderContr">¿QUE ES LA CONTRIBUCION POR MEJORAS?</h4>
                 <p class="parrafoo">Las contribuciones por mejoras es un sistema que permite la realizacion, de forma
                     financiadas, de obras necesarias para el barrio, que son solicitadas por los vecinos.</p><br
                     class="saltoNone">
@@ -151,7 +151,7 @@
             <div class="comentarios">
                 <div class="cards-info">
                     <img class="picture lazyload" data-src="./img/8.webp" alt="detalles de cuotas FOGOP">
-                    <h4 class="name desc-mobile">En 1, 6, 12 o 18 CUOTAS</h4>
+                    <h4 class="name desc-mobile">EN 1, 6, 12 o 18 CUOTAS</h4>
                     <p class="parrafo2 desc-mobile">Cada vecino tiene la opción de elegir entre esas opciones de pago.
                         Si no eligen ninguna, por defecto se aplicará en 18 cuotas fijas.</p>
                 </div>
@@ -169,7 +169,7 @@
                 </div>
             </div><br class="saltoNone"><br class="saltoNone"><br class="saltoNone">
             <div class="linea-separacion"></div>
-            <h3 id="pagos" class="title2 dondeAbo saltoSeparado2">DONDE ABONAR O SOLICITAR FACTURAS IMPRESAS</h3>
+            <h3 id="pagos" class="title2 dondeAbo saltoSeparado2">¿DONDE ABONAR O SOLICITAR FACTURAS IMPRESAS?</h3>
             <section class="order-Grid">
                 <div class="grid-container">
                     <div class="grid-item1 mobile-grid">
@@ -237,6 +237,7 @@
                     </div>
                 </div>
             </section>
+            <h5>Su boleta correspondiente a las obra de "Contribución por Mejoras" se recibirán una vez culminada la obra en cuestión. Ante cualquier duda se puede comunicar al número +54 9 379-4265994</h5>
         </section>
         <section class="box4">
             <h2 class="sub-title3">Consulta el estado de deuda, imprimí o abona tus boletas desde ACOR.</h2><br>
