--- a/faq.html
+++ b/faq.html
@@ -19,15 +19,14 @@
 
 <body>
     <div class="headerNav">
-        <img id="logo-img" class="lazyload" src="./img/logotypefogop.webp" alt="logo FOGOP">
+        <img id="logo-img" class="lazyload" src="./img/fogo-logoo.png" alt="logo FOGOP">
     </div>
 
     <div class="faq-container">
         <h1>Preguntas Frecuentes</h1>
         <div class="faq-question">
             <h2>¿En que consiste el Proyecto de Luminarias?</h2>
-            <p>El proyecto de luminarias del programa Contribucion por Mejoras, consta en mejoras para proporcionar iluminación
-                en los barrios y calles de la ciudad para garantizar la seguridad de los residentes.</p>
+            <p>El proyecto de luminarias del programa por Contribución de Mejoras, consiste en un recambio integral de la tecnología de las lámparas de sodio de alta presión por las de tecnología Led en distintos barrios de nuestra ciudad, a fines de lograr una ciudad más sustentable y amigable para el vecino, mejorando la eficiencia energética como consecuencia de una vida útil más amplia, menor consumo y el bajo costo de mantenimiento de las luminarias, aumentando los niveles lumínicos en la vía pública, (siguiendo la normativa vigente de seguridad vial), y contribuyendo a mejorar la seguridad del espacio público.</p>
         </div>
         <div class="faq-question">
             <h2>¿Cómo puedo solicitar una nueva luminaria en mi calle?</h2>
