--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
             </div>
         </div>
         <section class="column1" id="project">
-            <div class="graf">
+            <div class="graf-info">
                 <img class="lazyload" data-src="/img/f3.webp" alt="proyecto luminarias, FOGOP">
             </div>
-            <div class="box">
+            <div class="start-info">
                 <h3 class="title">PROYECTO DE LUMINARIAS</h3><br>
                 <h4 class="orderContr">¿QUE ES LA CONTRIBUCION POR MEJORAS?</h4>
                 <p class="parrafoo">Las contribuciones por mejoras es un sistema que permite la realizacion, de forma
@@ -237,7 +237,7 @@
                     </div>
                 </div>
             </section>
-            <h5>Su boleta correspondiente a las obra de "Contribución por Mejoras" se recibirán una vez culminada la obra en cuestión. Ante cualquier duda se puede comunicar al número +54 9 379-4265994</h5>
+            <h5>Su boleta correspondiente a la obra de "Contribución por Mejoras" la recibirá una vez culminada la obra en cuestión. Ante cualquier duda se puede comunicar al número +54 9 379-4265994</h5>
         </section>
         <section class="box4">
             <h2 class="sub-title3">Consulta el estado de deuda, imprimí o abona tus boletas desde ACOR.</h2><br>
