--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
         <section class="column1" id="project">
             <div class="graf-info">
-                <img class="lazyload" data-src="/img/f3.webp" alt="proyecto luminarias, FOGOP">
+                <img id="img-zoom"  src="/img/f1.webp" alt="proyecto luminarias, FOGOP">
             </div>
             <div class="start-info">
                 <h3 class="title">PROYECTO DE LUMINARIAS</h3><br>
